correct footer position mobile

--- a/src/components/Footer/Footer.module.scss
+++ b/src/components/Footer/Footer.module.scss
@@ -60,6 +60,7 @@
         position: relative;
         width: 100%;
         margin-top: 1rem;
+        padding-bottom: 1rem;
 
 
     }
